# machine-manager

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile-test  DockerfileBase  DockerfileMock  LICENSE  README.md  build_core_manager_image.sh  build_image_ci.sh  build_image_emulator_base.sh  build_machine_manager_image.sh  build_mock_machine_manager_image.sh  defective_session_registry.py  download-test-files  emulator_client.py  execute_core_manager_ephemeral_container.sh  execute_defective_core_manager_ephemeral_container.sh  execute_defective_machine_manager_ephemeral_container.sh  execute_machine_manager_ephemeral_container.sh  fail_test_client.py  generate-cartesi-gprc  generate_python_grpc_code.sh  install.sh  machine-manager  machine-manager-mock  manager.proto  manager.py  manager_pb2.py  manager_pb2_grpc.py  manager_server.py  mock_manager_server.py  requirements.txt  requirements_dev.txt  session_registry.py  test-client  test_client  test_client.py  (+1 more)
.github/workflows/: Dockerfile  docker.yml
cartesi-grpc-interfaces/: Cargo.toml  build.rs
cartesi-grpc-interfaces/src/: conversions.rs  lib.rs
cartesi-grpc-interfaces/src/grpc_stubs/: mod.rs
cartesi-jsonrpc-interfaces/: Cargo.toml
cartesi-jsonrpc-interfaces/src/: index.rs  lib.rs  openrpc.json
grpc-cartesi-machine/: Cargo.toml
grpc-cartesi-machine/src/: conversions.rs  lib.rs  test_client.rs
grpc-cartesi-machine/tests/: cartesi_machine_client_tests.rs
jsonrpc-cartesi-machine/: Cargo.toml
jsonrpc-cartesi-machine/src/: conversions.rs  lib.rs  test_client.rs
jsonrpc-cartesi-machine/tests/: cartesi_machine_client_tests.rs
machine-manager-server/: Cargo.toml
machine-manager-server/src/: defective_session_registry.rs  lib.rs  main.rs  server_manager.rs  session.rs  session_manager.rs
src/: checkin_manager.py  defective_session_registry.py  machine_manager.py  manager_server.py  session_registry.py  utils.py
tests/: download-test-images.sh
tests/demo-machine-manager-client/: Cargo.toml
tests/demo-machine-manager-client/src/: main.rs
tests/rust-test-client/: Cargo.toml  Dockerfile  build.rs
tests/rust-test-client/features/: end_session.feature  new_session.feature  session_get_proof.feature  session_read_write_memory.feature  session_run.feature  session_run_hello_world.feature  session_step.feature  session_store_load.feature
tests/rust-test-client/src/: lib.rs  utils.rs
tests/rust-test-client/tests/: cucumber.rs  world.rs
tests/rust-test-client/tests/steps/: end_session.rs  mod.rs  new_session.rs  session_get_proof.rs  session_read_write_memory.rs  session_run.rs  session_run_hello_world.rs  session_step.rs  session_store_load.rs
tools/dev/docker/: Dockerfile
