[package]
name = "cartesi-grpc-interfaces"
version = "0.1.0"
authors = ["Marko Atanasievski <marko.atanasievski@cartesi.io>"]
edition = "2018"

[dependencies]
tonic = { version = "0.8.2", features = ["gzip"]}
prost = "0.11"
tokio = { version = "~1.12.0", features = ["macros", "rt-multi-thread", "time"] }
hyper = { version = "=0.14.20", features = ["full"] }
http-body = "0.4.5"

[build-dependencies]
tonic-build = "0.8.2"



