[package]
name = "machine-manager-server"
version = "0.1.0"
authors = ["Marko Atanasievski <marko.atanasievski@cartesi.io>"]
edition = "2021"


[[bin]]
name = "machine-manager"
path = "src/main.rs"


[dependencies]
grpc-cartesi-machine = { path = "../grpc-cartesi-machine" }
cartesi-grpc-interfaces = { path = "../cartesi-grpc-interfaces" }
tonic = "0.8.2"
prost = "0.11"
tokio = { version = "~1.12.0", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.4"
async-trait = "0.1.51"
rstest = "0.11.0"
async-mutex = "1.4.0"
http = "0.2.4"
getopts = "0.2.21"
sha3 = "0.9.1"
generic-array = "0.14.4"
chrono = "0.4.19"
log = "0.4.14"
env_logger = "0.9"


[build-dependencies]
tonic-build = "0.8.2"

[env]
CARTESI_BIN_PATH = "/bin"

