# Copyright 2023 Cartesi Pte. Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy of the
# License at http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed
# under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, either express or implied. See the License for the
# specific language governing permissions and limitations under the License.

[package]
name = "rust-test-client"
version = "0.1.0"
edition = "2018"

[[test]]
name = "cucumber"
harness = false

[dependencies]
tonic = "0.8.2"
prost = "0.11"
async-trait = "0.1.42"
tokio = { version = "~1.12.0", features = ["macros", "rt-multi-thread", "process", "time"]}
futures = "0.3.4"
rand = "0.7.2"
regex = "1.5"
sha2 = "0.9.6"
json = "0.12.4"

[build-dependencies]
tonic-build = "0.8.2"

[dev-dependencies]
"cucumber_rust" = "0.9"
